<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout_Top"
        android:background="@drawable/pic_sky"
        android:layout_marginBottom="650dp"
        android:layout_marginTop="0dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <TextView
        android:id="@+id/scoreText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_0"
        android:textColor="@color/md_theme_light_scrim"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/textView_UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textColor="@color/md_theme_light_scrim"
        android:textSize="18sp"
        android:layout_margin="16dp"
        android:layout_toEndOf="@+id/scoreText"
        android:layout_alignTop="@id/scoreText"/>

        <TextView
            android:id="@+id/stopperText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0_mp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_margin="12dp"
            android:layout_toEndOf="@id/textView_UserName"
            android:layout_alignTop="@id/scoreText"
            android:layout_alignParentEnd="true"
            android:textAlignment="textEnd"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_Middle"
        android:background="@android:color/black"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/paddle"
            android:layout_width="100dp"
            android:layout_height="20dp"
            android:background="#E8E8E8"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>

        <View
            android:id="@+id/ball"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@drawable/rolling_football_ball_gif"
            android:layout_above="@id/paddle"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:id="@+id/brickContainer"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_above="@id/ball"
            android:layout_marginBottom="20dp"
            android:orientation="vertical"/>

        <Button
            android:id="@+id/button_Newgame"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:layout_centerHorizontal="true"
            android:text="@string/new_game">
        </Button>
        <Button
            android:id="@+id/button_HighScores"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="250dp"
            android:layout_centerHorizontal="true"
            android:text="@string/highscores">
        </Button>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout_Bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="640dp"
        android:background="@drawable/pic_lava"
        >

    </RelativeLayout>

</RelativeLayout>



